--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ pool:
   vmImage: 'Ubuntu 16.04'
 
 variables:
-  imageName: 'Kali:$(build.buildId)'
+  imageName: 'kali:$(build.buildId)'
 
 steps:
 - script: docker build -f Dockerfile -t $(imageName) .
