--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,5 @@ variables:
 steps:
 - script: docker build -f Dockerfile -t $(imageName) .
   displayName: 'docker build'
-- script: docker login -u $(dockerId) -p $(pswd)
-  displayName: 'dockeLogin'
-- script: docker push $(dockerId)/$(imageName)
+- script: docker login -u $(dockerId) -p $(pswd) && docker push $(dockerId)/$(imageName)
   displayName: 'dockerHub'
