--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,10 +2,15 @@ pool:
   vmImage: 'Ubuntu 16.04'
 
 variables:
-  imageName: 'kali:$(build.buildId)'
+  imageName: 'kali'
+  tag: 'kali:$(build.buildId)'
 
 steps:
-- script: docker build -f Dockerfile -t $(imageName) .
+- script: docker build -f Dockerfile -t $(tag) .
   displayName: 'docker build'
-- script: docker login -u $(dockerId) -p $(pswd) && docker push $(dockerId)/$(imageName)
+- script: docker login -u $(dockerId) -p $(pswd)  
+  displayName: 'dockerLogin'
+- script: docker tag $(tag) $(dockerId)/$(imageName)
+  displayName: 'dockerTag'
+- script: docker push $(dockerId)/$(imageName)
   displayName: 'dockerHub'
