--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,16 +1,5 @@
 pool:
   vmImage: 'Ubuntu 16.04'
-
-variables:
-  imageName: 'kali'
-  tag: 'kali:$(build.buildId)'
-
 steps:
-- script: docker build -f Dockerfile -t $(tag) .
-  displayName: 'docker build'
-- script: docker login -u $(dockerId) -p $(pswd)  
-  displayName: 'dockerLogin'
-- script: docker tag $(tag) $(dockerId)/$(imageName)
-  displayName: 'dockerTag'
-- script: docker push $(dockerId)/$(imageName)
-  displayName: 'dockerHub'
+- script: make release
+  displayName: build and push to docker hub
