Added a makefile :whale:

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,8 @@
 pool:
   vmImage: 'Ubuntu 16.04'
-  
+
 steps:
+- script: PSWD=$(pswd)
+  displayName: password as env variable
 - script: make release
   displayName: build and push to docker hub
